<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (c) 2021, 2024 Contributors to the Eclipse Foundation
    All rights reserved.

    This program and the accompanying materials are made available under the
    terms of the Eclipse Public License v. 2.0, which is available at
    http://www.eclipse.org/legal/epl-2.0.

    This Source Code may also be made available under the following Secondary
    Licenses when the conditions for such availability set forth in the
    Eclipse Public License v. 2.0 are satisfied: GNU General Public License,
    version 2 with the GNU Classpath Exception, which is available at
    https://www.gnu.org/software/classpath/license.html.

    SPDX-License-Identifier: EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.eclipse.ee4j</groupId>
        <artifactId>project</artifactId>
        <version>1.0.9</version>
        <relativePath>./do-no-tuse</relativePath>
    </parent>

    <groupId>jakarta.tck</groupId>
    <artifactId>jakarta-pages-tck</artifactId>
    <version>4.0.0</version>
    <packaging>jar</packaging>

    <name>pages-tck</name>
    <description>JSP TCK</description>

    <properties>
        <arquillian.junit>1.7.0.Alpha14</arquillian.junit>
        <jakarta.annotation-api.version>3.0.0-M1</jakarta.annotation-api.version>
        <jakarta.el-api.version>6.0.0-RC1</jakarta.el-api.version>
        <jakarta.mail-api.version>2.1.2</jakarta.mail-api.version>
        <jakarta.servlet-api.version>6.1.0-M2</jakarta.servlet-api.version>
        <jms-api.version>3.1.0</jms-api.version>
        <jsp-api.version>4.0.0-M2</jsp-api.version>
        <jakarta.ee.version>11.0.0-M1</jakarta.ee.version>
        <junit.jupiter.version>5.9.3</junit.jupiter.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>jakarta.tck</groupId>
            <artifactId>common</artifactId>
            <version>${jakarta.ee.version}</version>
        </dependency>
        <dependency>
            <groupId>jakarta.tck</groupId>
            <artifactId>runtime</artifactId>
            <version>${jakarta.ee.version}</version>
        </dependency>
        <dependency>
            <groupId>jakarta.tck</groupId>
            <artifactId>libutil</artifactId>
            <version>${jakarta.ee.version}</version>
        </dependency>
        <dependency>
            <groupId>jakarta.tck</groupId>
            <artifactId>signaturetest</artifactId>
            <version>${jakarta.ee.version}</version>
        </dependency>
        <dependency>
            <groupId>jakarta.tck</groupId>
            <artifactId>sigtest-maven-plugin</artifactId>
            <version>2.2</version>
        </dependency>
        <dependency>
            <groupId>jakarta.servlet.jsp</groupId>
            <artifactId>jakarta.servlet.jsp-api</artifactId>
            <version>${jsp-api.version}</version>
        </dependency>
        <dependency>
            <groupId>jakarta.servlet</groupId>
            <artifactId>jakarta.servlet-api</artifactId>
            <version>${jakarta.servlet-api.version}</version>
        </dependency>
        <dependency>
            <groupId>jakarta.annotation</groupId>
            <artifactId>jakarta.annotation-api</artifactId>
            <version>${jakarta.annotation-api.version}</version>
        </dependency>
        <dependency>
            <groupId>jakarta.jms</groupId>
            <artifactId>jakarta.jms-api</artifactId>
            <version>${jms-api.version}</version>
        </dependency>
        <dependency>
            <groupId>jakarta.el</groupId>
            <artifactId>jakarta.el-api</artifactId>
            <version>${jakarta.el-api.version}</version>
        </dependency>
        <dependency>
            <groupId>jakarta.mail</groupId>
            <artifactId>jakarta.mail-api</artifactId>
            <version>${jakarta.mail-api.version}</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.jupiter.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jboss.arquillian.junit5</groupId>
            <artifactId>arquillian-junit5-container</artifactId>
            <version>${arquillian.junit}</version>
        </dependency>
        <dependency>
            <groupId>org.jboss.arquillian.junit5</groupId>
            <artifactId>arquillian-junit5-core</artifactId>
            <version>${arquillian.junit}</version>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>repo2</id>
            <name>staging repo</name>
            <url>https://jakarta.oss.sonatype.org/content/repositories/staging</url>
        </repository>
        <repository>
            <id>repo1</id>
            <name>maven repo</name>
            <url>https://repo1.maven.org/maven2/</url>
        </repository>
    </repositories>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>LICENSE_${license}.md</include>
                    <include>ee/</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <doclint>none</doclint>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <id>distribution</id>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <phase>package</phase>
                        <configuration>
                            <descriptors>
                                <descriptor>src/main/assembly/assembly.xml</descriptor>
                            </descriptors>
                            <escapeString>\</escapeString>
                            <appendAssemblyId>false</appendAssemblyId>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>EFTL</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <bundle-name>jakarta-pages-tck</bundle-name>
                <license>EFTL</license>
            </properties>
        </profile>
        <profile>
            <id>EPL</id>
            <properties>
                <bundle-name>pages-tck</bundle-name>
                <license>EPL</license>
            </properties>
        </profile>
        <profile>
            <id>record-signature</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <properties>
                <bundle-name>jakarta-pages-tck</bundle-name>
                <license>EFTL</license>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>jakarta.tck</groupId>
                        <artifactId>sigtest-maven-plugin</artifactId>
                        <version>2.2</version>
                        <configuration>
                            <FileName>${project.build.directory}/jakarta.servlet.jsp.sig_${project.version}</FileName>
                            <packages>jakarta.servlet.jsp,jakarta.servlet.jsp.el,jakarta.servlet.jsp.tagext</packages>
                        </configuration>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>generate</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
